# span-mt-metrics-eval

./: .gitignore  README.md  pyproject.toml
src/span_mt_metaeval_metrics/: __init__.py  matching.py  metrics.py
src/span_mt_metrics_eval/: __init__.py  api.py  input.py  matching.py  metrics.py  options.py  results.py  spans.py  types.py  validation.py
src/span_mt_metrics_eval/matching/: __init__.py  greedy.py  mpp.py  optimal.py  pairs.py
src/span_mt_metrics_eval/scoring/: __init__.py  aggregation.py  coverage.py  many_to_many.py  one_to_one.py  segments.py
